crates/toml/tests/snapshots/invalid/string/bad-hex-esc-3.stderr
TOML parse error at line 1, column 19
  |
1 | bad-hex-esc-3 = "\x"
  |                   ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
